Calculate root module set